--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,25 @@
       <artifactId>jsoup</artifactId>
       <version>1.11.3</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.1</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/top.jfunc.common/converter -->
+    <dependency>
+      <groupId>top.jfunc.common</groupId>
+      <artifactId>converter</artifactId>
+      <version>1.8.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>4.1</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
